# Contest1

./: .gitignore  CMakeLists.txt
task1/: main.cpp
task2/: main.cpp
task3/: main.cpp
task4/: main.cpp
task5/: main.cpp
task6/: main.cpp
task7/: main.cpp
task8/: main.cpp
