cmake_minimum_required(VERSION 3.0)

project(task1)

add_executable(task1 task1/main.cpp)

project(task2)

add_executable(task2 task2/main.cpp)

project(task3)

add_executable(task3 task3/main.cpp)

project(task4)

add_executable(task4 task4/main.cpp)

project(task5)

add_executable(task5 task5/main.cpp)

project(task6)

add_executable(task6 task6/main.cpp)

project(task7)

add_executable(task7 task7/main.cpp)

project(task8)

add_executable(task8 task8/main.cpp)
